2010-03-04  Matthew Mundell <matthew.mundell@intevation.de>

	* src/html/src/omp.xsl (trend_meter): Get trend from OMP.

2010-03-04  Michael Wiegand <michael.wiegand@intevation.de>

	Post release version bump.

	* CMakeLists.txt: Updated version number.

	* src/html/src/about.htm4: Updated version number.

2010-03-04  Michael Wiegand <michael.wiegand@intevation.de>

	Preparing the gsa 1.0.0-beta5 release, part two.

	* src/html/src/about.htm4: Updated version number.

	* CHANGES: Updated, added line missing from last commit.

	* ChangeLog: Corrected entry.

2010-03-04  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* CHANGES: Updated and improved a bit for beta4.

2010-03-04  Michael Wiegand <michael.wiegand@intevation.de>

	* src/html/src/help/reports.htm4: Added help texts for ITG and CPE.

2010-03-04  Michael Wiegand <michael.wiegand@intevation.de>

	Preparing the gsa 1.0.0-beta5 release, part one.

	* ChangeLog: Restored lost entry.

	* CHANGES: Updated.

2010-03-04  Michael Wiegand <michael.wiegand@intevation.de>

	Add format for CPE inventory report.

	* src/html/src/omp.xsl (html-report-details): Add report format "CPE".

2010-03-03  Matthew Mundell <matthew.mundell@intevation.de>

	Add format for IT-Grundschutz (German FSI IT baseline protection) report.

	* src/gsad.c (init_validator): Relax "format" rule.

	* src/gsad_omp.c (get_report_omp): Relax report format check.

	* src/html/src/omp.xsl (html-report-details): Add report format "ITG".

2010-03-02  Matthew Mundell <matthew.mundell@intevation.de>

	* src/gsad.c (DATE_2822_LEN): New define.
	(file_content_response): Add Last-Modified and Expires headers.

2010-03-02  Matthew Mundell <matthew.mundell@intevation.de>

	* src/html/src/omp.xsl (get_nvt_details): Add a help button.

	* src/html/src/help/nvts.htm4: New page.

	* src/html/src/help/contents.htm4: Link to NVT Details in NVT help.

2010-03-02  Matthew Mundell <matthew.mundell@intevation.de>
